--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Dr. Wenhao Li (李文浩)"
 title_separator          : "-"
 name                     : &name "Dr. Wenhao Li"
-description              : &description "Assistant Professor, Department of Operations Management, College of Business, Shanghai University of Finance and Economics"
+description              : &description "Assistant Professor, College of Business, Shanghai University of Finance and Economics"
 url                      : "https://WenhaoLi666.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "WenhaoLi666.github.io"
@@ -84,8 +84,8 @@ analytics:
 author:
   name             : "Dr. Wenhao Li"
   avatar           : "profile.png"
-  bio              : "Assistant Professor, Department of Operations Management, College of Business, Shanghai University of Finance and Economics"
-  location         : "Yangpu, Shanghai, China"
+  bio              : "Assistant Professor, College of Business, Shanghai University of Finance and Economics"
+  location         : "Shanghai, China"
   employer         :
   pubmed           :
   orcid            : "https://orcid.org/0000-0003-1352-2775"
